src/objects/Business_Team_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Account_Phone_No__c</fullName>
        <formula>Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Team Activities</relationshipLabel>
        <relationshipName>Business_Teams2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_s_Department__c</fullName>
        <defaultValue>$Setup.ConstantsH__c.Department__c</defaultValue>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <label>Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Group - read/write</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group - read only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departmental</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <formula>Account__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <label>Business Team Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Team Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>